{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 11,
  "lineage": "f2c7e89b-f220-8caf-55c3-34268c604259",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:292011703637:loadbalancer/example-elb",
            "availability_zones": [
              "us-east-1e"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "example-elb-376961983.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "example-elb",
            "idle_timeout": 400,
            "instances": [
              "i-03915aac6d92ad249"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "example-elb",
            "security_groups": [
              "sg-0bf418cb803bdf2cd"
            ],
            "source_security_group": "292011703637/elb_sg",
            "source_security_group_id": "sg-0bf418cb803bdf2cd",
            "subnets": [
              "subnet-0ecc51e7f6d55c35d"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_internet_gateway.gw",
            "aws_security_group.default",
            "aws_security_group.elb",
            "aws_subnet.tf_test_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-5f709f34",
            "arn": "arn:aws:ec2:us-east-1:292011703637:instance/i-03915aac6d92ad249",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03915aac6d92ad249",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02fd329605e0734f4",
            "private_dns": "ip-10-0-0-22.ec2.internal",
            "private_ip": "10.0.0.22",
            "public_dns": "ec2-3-90-82-155.compute-1.amazonaws.com",
            "public_ip": "3.90.82.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092fe3b20fa8d1f2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecc51e7f6d55c35d",
            "tags": {
              "Name": "elb-example"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-086d04f1fcd59686d"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.tf_test_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292011703637:internet-gateway/igw-08032ca8d69aa3599",
            "id": "igw-08032ca8d69aa3599",
            "owner_id": "292011703637",
            "tags": {
              "Name": "tf_test_ig"
            },
            "vpc_id": "vpc-0a5202280d0a46fe0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08b1997858d4efe8b",
            "owner_id": "292011703637",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08032ca8d69aa3599",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_table"
            },
            "vpc_id": "vpc-0a5202280d0a46fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004987372995c527e",
            "route_table_id": "rtb-08b1997858d4efe8b",
            "subnet_id": "subnet-0ecc51e7f6d55c35d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.tf_test_subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292011703637:security-group/sg-086d04f1fcd59686d",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086d04f1fcd59686d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance_sg",
            "name_prefix": "",
            "owner_id": "292011703637",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a5202280d0a46fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292011703637:security-group/sg-0bf418cb803bdf2cd",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf418cb803bdf2cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "292011703637",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a5202280d0a46fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292011703637:subnet/subnet-0ecc51e7f6d55c35d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ecc51e7f6d55c35d",
            "map_public_ip_on_launch": true,
            "owner_id": "292011703637",
            "tags": {
              "Name": "tf_test_subnet"
            },
            "vpc_id": "vpc-0a5202280d0a46fe0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292011703637:vpc/vpc-0a5202280d0a46fe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c99951d013e670bc",
            "default_route_table_id": "rtb-091ee71ad45e905f7",
            "default_security_group_id": "sg-0a46fd03bb8b98b02",
            "dhcp_options_id": "dopt-8701edfd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a5202280d0a46fe0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091ee71ad45e905f7",
            "owner_id": "292011703637",
            "tags": {
              "Name": "tf_test"
            }
          }
        }
      ]
    }
  ]
}